@@ -9,14 +9,14 @@
     <groupId>net.sf.ehcache</groupId>
     <artifactId>ehcache-jmsreplication</artifactId>
     <name>JMS Replication</name>
-    <version>0.2</version>
+    <version>0.3</version>
     <packaging>jar</packaging>
     <description>This module provides replication via JMS 1.1</description>
     <dependencies>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-            <version>1.6.0-beta1</version>
+            <version>1.6.0-beta2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>javax.jms</groupId>
