@@ -768,6 +768,31 @@ public class OpenMqJMSReplicationTest extends ActiveMQJMSReplicationTest {
     }
 
 
+    /**
+     * Tests the JMSCacheLoader.
+     * <p/>
+     * We put an item in cache1, which does not replicate.
+     * <p/>
+     * We then do a get on cache2, which has a JMSCacheLoader which should ask the cluster for the answer.
+     * If a cache does not have an element it should leave the message on the queue for the next node to process.
+     */
+    @Override
+    @Test
+    public void testGet() throws InterruptedException {
+        super.testGet();
+    }
 
-
+    /**
+     * Tests the JMSCacheLoader.
+     * <p/>
+     * We put an item in cache1, which does not replicate.
+     * <p/>
+     * We then do a get on cache2, which has a JMSCacheLoader which should ask the cluster for the answer.
+     * If a cache does not have an element it should leave the message on the queue for the next node to process.
+     */
+    @Override
+    @Test
+    public void testGetAll() throws InterruptedException {
+        super.testGetAll();
+    }
 }
